--- a/css/style.css
+++ b/css/style.css
@@ -17,18 +17,30 @@ header h1 {
   text-align: center;
   margin: 0;
   padding-top: .25em;
+  color: #9d0609;
+  font-family: Alike;
+  font-size: 200%;
+  font-weight: 700;
 }
 
 header h2 {
   text-align: center;
   margin: 0;
   padding-bottom: 1em;
+  color: #9d0609;
+  font-family: Alike;
+  font-size: 200%;
+  font-weight: 700;
 }
 
 h3 {
   margin: 0;
   margin-top: 10px;
   margin-bottom: 5px;
+  background-color: #a5797b;
+  font-family: Alike;
+  font-size: 135%;
+  font-weight: 400;
 }
 
 p {
